# rooster

./: Cargo.toml  README.md  pyproject.toml  sql_executions.md
client/: requirements.txt  rooster_client.py
client/rooster/: __init__.py
example/: train_jax.py  train_pytorch.py
src/: main.rs  server.rs
src/cli/: mod.rs  read.rs
src/cli/visual/: app.rs  mod.rs  ui.rs
src/core/: db.rs  mod.rs  run.rs  session.rs  storage.rs  utils.rs
