[package]
name = "rooster"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
ratatui = "0.30.0"
